apps/postgresql/60.Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres-ingress
  namespace: postgres
  annotations:
    spec.ingressClassName: public
#    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  defaultBackend:
    service:
      name: postgres
      port:
        number: 5432
  rules:
  - host: "postgres.k8s.home"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: postgres
              port:
                number: 5432
